# inei-tools

./: .gitignore  README.md  confianza.py  corrupcion_gores.py  download.py  pyproject.toml
scripts/: criminalidad.py  criminalidad2.py  enapres.ipynb
src/inei_tools/: __init__.py
src/inei_tools/cleaners/: __init__.py  _encuesta_cleaner.py
src/inei_tools/configs/: encuesta_config.py
src/inei_tools/downloaders/: __init__.py  db_manager.py  enaho_downloader.py  exceptions.py  inei_downloader.py
src/inei_tools/encuestas/: __init__.py  _encuesta.py  ena.py  enaho.py  enapres.py  endes.py
src/inei_tools/resources/: enaho.sqlite  enaho_panel.sqlite  enapres.sqlite  encuestas.sqlite  endes.sqlite
src/inei_tools/tendencias/: __init__.py  _helper_functions.py  _trends_abc.py  cleaners.py  labels.py  question_type.py  t_enaho.py  t_enapres.py  t_endes.py  tendencias.py  trends.py
src/inei_tools/utils/: __init__.py  alter_tables.py  csv_tools.py  file_manager.py  reading.py
tests/: enaho_trends_perf.html  test_enaho_downloader.py  test_enapres_downloader.py  test_encuesta.py  test_endes_downloader.py  test_playground.py  test_read_stata.py
tests/downloaders/: test_enaho_downloader.py  test_enaho_trends.py  test_enapres_downloader.py  test_endes_downloader.py
